--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h5>Box</h5>
             <p>Tis a fun game<a href="c:\Users\jacob\OneDrive\Desktop\game\index.html">Box Game</a></p>
         </section>
-        <section><p>Associates <a href="nathan-boquiren.github.io/introtocoding/"></a></p></section>
+        <section><h5>Associates</h5><a href="nathan-boquiren.github.io/introtocoding/">Scumerville Lightsabers</a></section>
     </main>
     <footer>
         <p>&copy; 2024 United Sabers of Corellia</p>
