--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </section>
         <section id="Box">
             <h5>Box</h5>
-            <p>Tis a fun game<a href="c:\Users\jacob\OneDrive\Desktop\game\index.html">Box Game</a></p>
+            <p>Tis a fun game<a href="c:https://darth-jacob.github.io/boxy/">Box Game</a></p>
         </section>
         <section><h5>Associates</h5><a href="nathan-boquiren.github.io/introtocoding/">Scumerville Lightsabers</a></section>
     </main>
