--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
         </section>
         <section id="Box">
             <h5>Box</h5>
-            <p>Tis a fun game<a href="https://darth-jacob.github.io/boxy/">Box Game</a></p>
+            <p>Tis a fun game<a href="///C:/https://darth-jacob.github.io/boxy/">Box Game</a></p>
         </section>
-        <section><h5>Associates</h5><a href="nathan-boquiren.github.io/introtocoding/">Scumerville Lightsabers</a></section>
+        <section><h5>Associates</h5><a href="///C:/nathan-boquiren.github.io/introtocoding/">Scumerville Lightsabers</a></section>
     </main>
     <footer>
         <p>&copy; 2024 United Sabers of Corellia</p>
