--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h5>Box</h5>
             <p>Tis a fun game<a href="///C:/https://darth-jacob.github.io/boxy/">Box Game</a></p>
         </section>
-        <section><h5>Associates</h5><a href="/https://nathan-boquiren.github.io">Scumerville Lightsabers</a></section>
+        <section><h5>Associates</h5><a href="https://nathan-boquiren.github.io/scummervillesaberarts.com/classes.html">Scumerville Lightsabers</a></section>
     </main>
     <footer>
         <p>&copy; 2024 United Sabers of Corellia</p>
