--- a/contact.html
+++ b/contact.html
@@ -25,5 +25,6 @@
             Email (AvidLightSaberGuy@yahoo.com)
         </p>
     </main>
+    <footer><p>&copy; 2024 United Sabers of Corellia</p></footer>
 </body>
 </html>
