--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <button class="hover-button">
         <nav>
             <ul>
-                <li><button class="hover-button"><a href="#home">Home</a></li>
+                <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><a href="#Box">Play</a></li>
