--- a/index.html
+++ b/index.html
@@ -9,16 +9,14 @@
 <body>
     <header>
         <h1>United Sabers of Corellia</h1>
-        <button class="hover-button">
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
+                <li><button class="hover-button"><a href="#home">Home</a></button></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><a href="#Box">Play</a></li>
             </ul>
         </nav>
-        </button>
     </header>
    
     <main>
