--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>United Sabers of Corellia</h1>
         <nav>
             <ul>
-                <li><button class="hover-button"><a href="#home">Home</a></button></li>
+                <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><a href="#Box">Play</a></li>
