--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
             <p>Tis a fun game<a href="https://darth-jacob.github.io/boxy/">Box Game</a></p>
         </section>
         <section>
-            <button class="hover-button"><h5>Associates</h5></button>
-            <a href="https://nathan-boquiren.github.io/scummervillesaberarts.com/index.html">Scumerville Lightsabers</a>
+            <h5>Associates</h5>
+            <button class="hover-button">
+            <a href="https://nathan-boquiren.github.io/scummervillesaberarts.com/index.html">Scumerville Lightsabers</a></button>
         </section>
     </main>
     <footer>
