--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </section>
         <section>
             <h5>Associates</h5>
-            <button class="hover-button"></button><a href="https://nathan-boquiren.github.io/scummervillesaberarts.com/index.html">Scumerville Lightsabers</a>
+            <button class="hover-button"><a href="https://nathan-boquiren.github.io/scummervillesaberarts.com/index.html">Scumerville Lightsabers</a></button>
         </section>
     </main>
     <footer>
